# backend

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml  build.rs  rustfmt.toml
api/booking/: booking.py  curltest  mod.rs
emails/: mail.py
migrations/2019-11-25-143159_reservations/: up.sql
migrations/2019-11-26-164900_reservations/: down.sql  up.sql
migrations/2019-11-28-112102_users/: up.sql
migrations/2019-11-28-120105_people_amount/: up.sql
rgi/: mod.rs  smthing.md
rgi/booking/: booking.py  curltest  mail.py  mod.rs  test.py
rgi/emails/: mail.py  mod.rs
src/: admin.rs  auth.rs  booking.rs  db.rs  lib.rs  main.rs  models.rs  rgi  schema.rs  static_server.rs
tests/: booking.rs
