[package]
name = "backend"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidk.kubis3@gmail.com>", "Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool"]
